[tool.poetry]
name = "project-name"  # You'll want to customize this
version = "0.1.0"
description = ""  # Add your project description
authors = ["Your Name <your.email@example.com>"]  # Add your info
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "10.2.0"
ansible-compat = "24.7.0"
ansible-core = "2.17.2"
attrs = "23.2.0"
bracex = "2.4"
cachetools = "5.3.3"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-help-colors = "0.9.4"
cryptography = "42.0.5"
enrich = "1.2.7"
google-auth = "2.28.1"
idna = "3.7"
Jinja2 = "3.1.4"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
mdurl = "0.1.2"
molecule = "24.2.0"
molecule-plugins = "23.5.0"
packaging = "23.2"
pluggy = "1.4.0"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
Pygments = "2.17.2"
PyYAML = "6.0.1"
referencing = "0.33.0"
requests = "2.32.0"
resolvelib = "1.0.1"
rich = "13.7.0"
rpds-py = "0.18.0"
rsa = "4.9"
subprocess-tee = "0.4.1"
toml = "0.10.2"
urllib3 = "2.2.2"
wcmatch = "8.5.1"
pyproject-toml = "^0.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
